[gd_scene load_steps=2 format=3 uid="uid://c3eyjdquyieag"]

[ext_resource type="Script" path="res://Menu.gd" id="1_wd5rd"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wd5rd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="1 Player" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1 PLAYER"

[node name="2 Player" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "2 PLAYER"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/1 Player" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/2 Player" to="." method="_on__player_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
